Add slider and search section

--- a/index-3.html
+++ b/index-3.html
@@ -375,7 +375,7 @@
               </p>
               <div class="hero-button">
                 <a href="car-details.html" class="theme-btn hover-white"
-                  >Shop New <i class="fa-regular fa-car"></i
+                  >Shop Now <i class="fa-regular fa-car"></i
                 ></a>
               </div>
             </div>
@@ -391,7 +391,9 @@
                         alt="RevAuto"
                       />
 
-                      <div class="hero-3-footer">Footer</div>
+                      <div class="hero-3-footer">
+                        <h3>BMW i4 : M Sport</h3>
+                      </div>
                     </div>
                   </div>
                   <div class="swiper-slide">
@@ -400,6 +402,9 @@
                         src="assets/img/homepage-3/slider-2.jpg"
                         alt="RevAuto"
                       />
+                      <div class="hero-3-footer">
+                        <h3>BMW i4 : M Sport</h3>
+                      </div>
                     </div>
                   </div>
 
@@ -409,6 +414,9 @@
                         src="assets/img/homepage-3/slider-4.jpg"
                         alt="RevAuto"
                       />
+                      <div class="hero-3-footer">
+                        <h3>BMW i4 : M Sport</h3>
+                      </div>
                     </div>
                   </div>
                   <div class="swiper-slide">
@@ -417,6 +425,9 @@
                         src="assets/img/homepage-3/slider-6.jpg"
                         alt="RevAuto"
                       />
+                      <div class="hero-3-footer">
+                        <h3>BMW i4 : M Sport</h3>
+                      </div>
                     </div>
                   </div>
                   <div class="swiper-slide">
@@ -425,6 +436,9 @@
                         src="assets/img/homepage-3/slider-7.jpg"
                         alt="RevAuto"
                       />
+                      <div class="hero-3-footer">
+                        <h3>BMW i4 : M Sport</h3>
+                      </div>
                     </div>
                   </div>
                 </div>
@@ -432,6 +446,73 @@
             </div>
           </div>
         </div>
+      </div>
+
+      <!-- search section -->
+      <div class="search-section-3 container">
+        <form action="#" class="w-100 row gap-1">
+          <div class="col">
+            <select
+              class="form-select focus-ring focus-ring-light search-select-3"
+            >
+              <option selected>All Types</option>
+              <option value="1">Cars</option>
+              <option value="2">Jeep</option>
+              <option value="3">Pickup</option>
+              <option value="3">Sports</option>
+              <option value="3">Electric</option>
+              <option value="3">Hybrid</option>
+            </select>
+          </div>
+          <div class="col">
+            <select
+              class="form-select focus-ring focus-ring-light search-select-3"
+            >
+              <option selected>All Brand</option>
+              <option value="1">One</option>
+              <option value="2">Two</option>
+              <option value="3">Three</option>
+            </select>
+          </div>
+          <div class="col">
+            <select
+              class="form-select focus-ring focus-ring-light search-select-3"
+            >
+              <option selected>Registration Year</option>
+              <option value="1">One</option>
+              <option value="2">Two</option>
+              <option value="3">Three</option>
+            </select>
+          </div>
+
+          <div class="col">
+            <input
+              type="email"
+              class="form-control search-input-3"
+              placeholder="Keywords..."
+            />
+          </div>
+
+          <div class="col">
+            <button type="submit" class="search-button-3">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                fill="none"
+                viewBox="0 0 24 24"
+                id="Filter"
+              >
+                <path
+                  fill="#ffffff"
+                  fill-rule="evenodd"
+                  d="M20 5h-1.17a3.001 3.001 0 0 0-5.66 0H4a1 1 0 0 0 0 2h9.17a3.001 3.001 0 0 0 5.66 0H20a1 1 0 1 0 0-2zm-4 2a1 1 0 1 0 0-2 1 1 0 0 0 0 2zM3 12a1 1 0 0 1 1-1h1.17a3.001 3.001 0 0 1 5.66 0H20a1 1 0 1 1 0 2h-9.17a3.001 3.001 0 0 1-5.66 0H4a1 1 0 0 1-1-1zm5 1a1 1 0 1 0 0-2 1 1 0 0 0 0 2zm-4 4a1 1 0 1 0 0 2h9.17a3.001 3.001 0 0 0 5.66 0H20a1 1 0 1 0 0-2h-1.17a3.001 3.001 0 0 0-5.66 0H4zm13 1a1 1 0 1 1-2 0 1 1 0 0 1 2 0z"
+                  clip-rule="evenodd"
+                  class="color000000 svgShape"
+                ></path>
+              </svg>
+              Search
+            </button>
+          </div>
+        </form>
       </div>
     </section>
 
