add client section

--- a/main-files/index-3.html
+++ b/main-files/index-3.html
@@ -516,6 +516,49 @@
       </div>
     </section>
 
+    <!-- Client section started -->
+    <section class="client-3">
+      <div class="container">
+        <div class="swiper client-swiper">
+          <div class="swiper-wrapper">
+            <div class="swiper-slide">
+              <img src="assets/img/homepage-3/client-1.svg" alt="client" />
+            </div>
+            <div class="swiper-slide">
+              <img src="assets/img/homepage-3/client-2.svg" alt="client" />
+            </div>
+            <div class="swiper-slide">
+              <img src="assets/img/homepage-3/client-3.svg" alt="client" />
+            </div>
+            <div class="swiper-slide">
+              <img src="assets/img/homepage-3/client-4.svg" alt="client" />
+            </div>
+            <div class="swiper-slide">
+              <img src="assets/img/homepage-3/client-5.svg" alt="client" />
+            </div>
+            <div class="swiper-slide">
+              <img src="assets/img/homepage-3/client-6.svg" alt="client" />
+            </div>
+            <div class="swiper-slide">
+              <img src="assets/img/homepage-3/client-7.svg" alt="client" />
+            </div>
+            <div class="swiper-slide">
+              <img src="assets/img/homepage-3/client-8.svg" alt="client" />
+            </div>
+            <div class="swiper-slide">
+              <img src="assets/img/homepage-3/client-9.svg" alt="client" />
+            </div>
+            <div class="swiper-slide">
+              <img src="assets/img/homepage-3/client-10.svg" alt="client" />
+            </div>
+            <div class="swiper-slide">
+              <img src="assets/img/homepage-3/client-11.svg" alt="client" />
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <section style="height: 100vh"></section>
 
     <!--<< All JS Plugins >>-->
