Add counter up on homepage 3

--- a/main-files/index-3.html
+++ b/main-files/index-3.html
@@ -1981,6 +1981,38 @@
       </div>
     </section>
 
+    <!-- Counter Section Start -->
+    <section class="counter-section fix section-padding">
+      <div class="container">
+        <div class="counter-wrapper">
+          <div class="counter-box-3 wow fadeInUp" data-wow-delay=".2s">
+            <div class="content">
+              <h2><span class="count">25</span>+</h2>
+              <p>Years Experience</p>
+            </div>
+          </div>
+          <div class="counter-box-3 active wow fadeInUp" data-wow-delay=".4s">
+            <div class="content">
+              <h2><span class="count">155</span>+</h2>
+              <p>Vehicle Brands</p>
+            </div>
+          </div>
+          <div class="counter-box-3 wow fadeInUp" data-wow-delay=".6s">
+            <div class="content">
+              <h2><span class="count">150</span>+</h2>
+              <p>Vehicle Brands</p>
+            </div>
+          </div>
+          <div class="counter-box-3 wow fadeInUp" data-wow-delay=".8s">
+            <div class="content">
+              <h2><span class="count">25</span>+</h2>
+              <p>Years Experience</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <!--<< All JS Plugins >>-->
     <script src="assets/js/jquery-3.7.1.min.js"></script>
     <!--<< Viewport Js >>-->
