--- a/main-files/index-3.html
+++ b/main-files/index-3.html
@@ -1987,26 +1987,26 @@
         <div class="counter-wrapper">
           <div class="counter-box-3 wow fadeInUp" data-wow-delay=".2s">
             <div class="content">
-              <h2><span class="count">25</span>+</h2>
-              <p>Years Experience</p>
+              <h2><span class="count">10</span>M+</h2>
+              <p>Orders</p>
             </div>
           </div>
           <div class="counter-box-3 active wow fadeInUp" data-wow-delay=".4s">
             <div class="content">
-              <h2><span class="count">155</span>+</h2>
+              <h2><span class="count">199</span>+</h2>
               <p>Vehicle Brands</p>
             </div>
           </div>
           <div class="counter-box-3 wow fadeInUp" data-wow-delay=".6s">
             <div class="content">
-              <h2><span class="count">150</span>+</h2>
-              <p>Vehicle Brands</p>
+              <h2><span class="count">200</span>K+</h2>
+              <p>Available Parts</p>
             </div>
           </div>
           <div class="counter-box-3 wow fadeInUp" data-wow-delay=".8s">
             <div class="content">
-              <h2><span class="count">25</span>+</h2>
-              <p>Years Experience</p>
+              <h2><span class="count">12</span>K+</h2>
+              <p>Experienced Workers</p>
             </div>
           </div>
         </div>
