Add new footer on homepage 3

--- a/main-files/home-landing.html
+++ b/main-files/home-landing.html
@@ -1445,7 +1445,7 @@
       </div>
     </section>
 
-    <!-- Fotter Section Start -->
+    <!-- Footer Section Start -->
     <section
       class="footer-section fix bg-cover"
       style="background-image: url('assets/img/footer-bg.jpg')"
