Seller center design

--- a/main-files/index-3.html
+++ b/main-files/index-3.html
@@ -1981,32 +1981,43 @@
       </div>
     </section>
 
-    <!-- Counter Section Start -->
-    <section class="counter-section fix section-padding">
+    <!-- Seller Center -->
+    <section class="seller-center-3 py-5">
       <div class="container">
-        <div class="counter-wrapper">
-          <div class="counter-box-3 wow fadeInUp" data-wow-delay=".2s">
-            <div class="content">
-              <h2><span class="count">10</span>M+</h2>
-              <p>Orders</p>
+        <div class="row">
+          <div class="col-lg-6">
+            <div>
+              <img src="assets/img/homepage-3/seller.png" alt="RevAuto" />
             </div>
           </div>
-          <div class="counter-box-3 active wow fadeInUp" data-wow-delay=".4s">
-            <div class="content">
-              <h2><span class="count">199</span>+</h2>
-              <p>Vehicle Brands</p>
-            </div>
-          </div>
-          <div class="counter-box-3 wow fadeInUp" data-wow-delay=".6s">
-            <div class="content">
-              <h2><span class="count">200</span>K+</h2>
-              <p>Available Parts</p>
-            </div>
-          </div>
-          <div class="counter-box-3 wow fadeInUp" data-wow-delay=".8s">
-            <div class="content">
-              <h2><span class="count">12</span>K+</h2>
-              <p>Experienced Workers</p>
+          <div class="col-lg-6">
+            <div class="seller-center-3-right">
+              <h2>
+                Obtain a Reasonable Price for Your Vehicle. Sell to Us Right
+                Now.
+              </h2>
+              <p>
+                Superior customer service, affordable prices, and an extensive selection are our utmost priorities.
+              </p>
+
+              <ul class="mt-4">
+                <li>
+                  <i class="fa-solid fa-check"></i>
+                  <span>No-cost Inspection</span>
+                </li>
+                <li>
+                  <i class="fa-solid fa-check"></i>
+                  <span>Instant Payment</span>
+                </li>
+                <li>
+                  <i class="fa-solid fa-check"></i>
+                  <span>Best Price Guarantee</span>
+                </li>
+              </ul>
+
+              <button>
+                Get Started <i class="fa-solid fa-arrow-right"></i>
+              </button>
             </div>
           </div>
         </div>
@@ -3993,6 +4004,38 @@
       </div>
     </section>
 
+    <!-- Counter Section Start -->
+    <section class="counter-section fix section-padding">
+      <div class="container">
+        <div class="counter-wrapper">
+          <div class="counter-box-3 wow fadeInUp" data-wow-delay=".2s">
+            <div class="content">
+              <h2><span class="count">10</span>M+</h2>
+              <p>Orders</p>
+            </div>
+          </div>
+          <div class="counter-box-3 active wow fadeInUp" data-wow-delay=".4s">
+            <div class="content">
+              <h2><span class="count">199</span>+</h2>
+              <p>Vehicle Brands</p>
+            </div>
+          </div>
+          <div class="counter-box-3 wow fadeInUp" data-wow-delay=".6s">
+            <div class="content">
+              <h2><span class="count">200</span>K+</h2>
+              <p>Available Parts</p>
+            </div>
+          </div>
+          <div class="counter-box-3 wow fadeInUp" data-wow-delay=".8s">
+            <div class="content">
+              <h2><span class="count">12</span>K+</h2>
+              <p>Experienced Workers</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <!-- Footer section started -->
     <footer
       class="footer-3"
@@ -4058,25 +4101,26 @@
               data-wow-delay=".2s"
             >
               <div class="single-footer-widget">
-                <img src="assets/img/logo/white-logo.svg" alt="RevAuto">
-                <p class="my-3 fs-6">Lorem, ipsum dolor sit amet consectetur adipisicing elit. </p>
+                <img src="assets/img/logo/white-logo.svg" alt="RevAuto" />
+                <p class="my-3 fs-6">
+                  Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                </p>
 
                 <div class="footer-3-social-wrapper">
-                  <a href="#" >
-                    <i class="fa-brands fa-facebook-f "></i>
+                  <a href="#">
+                    <i class="fa-brands fa-facebook-f"></i>
                   </a>
 
-                  <a href="#" >
+                  <a href="#">
                     <i class="fa-brands fa-twitter"></i>
                   </a>
 
-                  <a href="#" >
+                  <a href="#">
                     <i class="fa-brands fa-linkedin-in"></i>
                   </a>
-                  <a href="#" >
+                  <a href="#">
                     <i class="fa-brands fa-youtube"></i>
                   </a>
-
                 </div>
               </div>
             </div>
@@ -4150,7 +4194,6 @@
           </div>
         </div>
         <div class="footer-bottom-wrapper">
-          
           <p class="wow fadeInUp" data-wow-delay=".5s">
             © 2024 RevAuto. All rights reserved.
           </p>
@@ -4168,14 +4211,17 @@
           </div>
 
           <div class="d-flex gap-2 align-items-center">
-            <p >We Accept: </p>
+            <p>We Accept:</p>
             <div>
               <i class="fa-brands fa-cc-mastercard fs-3"></i>
-            </div><div>
+            </div>
+            <div>
               <i class="fa-brands fa-cc-visa fs-3"></i>
-            </div><div>
+            </div>
+            <div>
               <i class="fa-brands fa-cc-stripe fs-3"></i>
-            </div><div>
+            </div>
+            <div>
               <i class="fa-brands fa-cc-paypal fs-3"></i>
             </div>
           </div>
