Update seller center and monor changed other place

--- a/main-files/index-3.html
+++ b/main-files/index-3.html
@@ -579,8 +579,28 @@
           </div>
           <div class="right-section">
             <button class="car-section-3-active-right">Latest</button>
-            <button>Lowest</button>
-            <button>Highest</button>
+            <button>Popular</button>
+            <button>On Sale</button>
+            <button class="d-flex align-items-center gap-1">
+              <svg
+                stroke="currentColor"
+                fill="none"
+                stroke-width="2"
+                viewBox="0 0 24 24"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                height="200px"
+                width="200px"
+                xmlns="http://www.w3.org/2000/svg"
+                style="width: 20px; height: auto"
+              >
+                <path d="m3 16 4 4 4-4"></path>
+                <path d="M7 20V4"></path>
+                <path d="m21 8-4-4-4 4"></path>
+                <path d="M17 4v16"></path>
+              </svg>
+              <span>Price</span>
+            </button>
           </div>
         </div>
 
@@ -1993,25 +2013,27 @@
           <div class="col-lg-6">
             <div class="seller-center-3-right">
               <h2>
-                Obtain a Reasonable Price for Your Vehicle. Sell to Us Right
-                Now.
+                Get the Best Value for Your Car – Sell to Us Today
               </h2>
               <p>
-                Superior customer service, affordable prices, and an extensive selection are our utmost priorities.
+                Receive a competitive and fair price for your car with our transparent evaluation process. Selling your car has never been this quick and hassle-free.
               </p>
 
               <ul class="mt-4">
                 <li>
                   <i class="fa-solid fa-check"></i>
-                  <span>No-cost Inspection</span>
+                  <h4>Trusted by Thousands, Nationwide Reach</h4>
+                  <p>As a leading car-selling service, we’re available across the country, ensuring you can sell your car conveniently, no matter where you are.</p>
                 </li>
                 <li>
                   <i class="fa-solid fa-check"></i>
-                  <span>Instant Payment</span>
+                  <h4>24/7 Support for a Stress-Free Experience</h4>
+                  <p>We’re here around the clock to assist you with any queries or concerns, making the car-selling process smooth and hassle-free.</p>
                 </li>
                 <li>
                   <i class="fa-solid fa-check"></i>
-                  <span>Best Price Guarantee</span>
+                  <h4>Quick and Efficient Car Repairs for Sellers</h4>
+                  <p>Need minor fixes before selling? Our expert team resolves most car issues on-site, ensuring your vehicle is ready for a seamless sale.</p>
                 </li>
               </ul>
 
@@ -2044,8 +2066,28 @@
           </div>
           <div class="right-section">
             <button class="car-section-3-active-right">Latest</button>
-            <button>Lowest</button>
-            <button>Highest</button>
+            <button>Popular</button>
+            <button>On Sale</button>
+            <button class="d-flex align-items-center gap-1">
+              <svg
+                stroke="currentColor"
+                fill="none"
+                stroke-width="2"
+                viewBox="0 0 24 24"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                height="200px"
+                width="200px"
+                xmlns="http://www.w3.org/2000/svg"
+                style="width: 20px; height: auto"
+              >
+                <path d="m3 16 4 4 4-4"></path>
+                <path d="M7 20V4"></path>
+                <path d="m21 8-4-4-4 4"></path>
+                <path d="M17 4v16"></path>
+              </svg>
+              <span>Price</span>
+            </button>
           </div>
         </div>
 
