Update car section

--- a/main-files/index.html
+++ b/main-files/index.html
@@ -599,44 +599,46 @@
       <div class="container">
         <div class="section-title-area">
           <div class="section-title">
-            <h6 class="wow fadeInUp">Our Car</h6>
             <h2 class="wow fadeInUp" data-wow-delay=".3s">
-              Let’s Find Your <br />
-              Dream Car
+              New Arrival
             </h2>
           </div>
-          <a href="car.html" class="theme-btn wow fadeInUp" data-wow-delay=".5s"
-            >Discover More <i class="fa-regular fa-car"></i
-          ></a>
         </div>
-        <ul class="nav">
-          <li class="nav-item">
-            <a href="#Popular" data-bs-toggle="tab" class="nav-link">
-              Most Popular
-            </a>
-          </li>
-          <li class="nav-item">
-            <a href="#Honda" data-bs-toggle="tab" class="nav-link active">
-              Honda
-            </a>
-          </li>
-          <li class="nav-item">
-            <a href="#Toyota" data-bs-toggle="tab" class="nav-link"> Toyota </a>
-          </li>
-          <li class="nav-item">
-            <a href="#Volkswagen" data-bs-toggle="tab" class="nav-link">
-              Volkswagen
-            </a>
-          </li>
-          <li class="nav-item">
-            <a href="#BMW" data-bs-toggle="tab" class="nav-link"> BMW </a>
-          </li>
-          <li class="nav-item">
-            <a href="#Chevrolet" data-bs-toggle="tab" class="nav-link">
-              Chevrolet
-            </a>
-          </li>
-        </ul>
+        <div class="car-section-3-short">
+          <div class="left-section">
+            <button class="car-section-3-active">All</button>
+            <button>Car</button>
+            <button>Jeep</button>
+            <button>Sports</button>
+            <button>Electric</button>
+            <button>Hybrid</button>
+          </div>
+          <div class="right-section">
+            <button class="car-section-3-active-right">Latest</button>
+            <button>Popular</button>
+            <button>On Sale</button>
+            <button class="d-flex align-items-center gap-1">
+              <svg
+                stroke="currentColor"
+                fill="none"
+                stroke-width="2"
+                viewBox="0 0 24 24"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                height="200px"
+                width="200px"
+                xmlns="http://www.w3.org/2000/svg"
+                style="width: 20px; height: auto"
+              >
+                <path d="m3 16 4 4 4-4"></path>
+                <path d="M7 20V4"></path>
+                <path d="m21 8-4-4-4 4"></path>
+                <path d="M17 4v16"></path>
+              </svg>
+              <span>Price</span>
+            </button>
+          </div>
+        </div>
         <div class="tab-content">
           <div id="Popular" class="tab-pane fade">
             <div class="row">
