Working on car details on homepage 3

--- a/main-files/index-3.html
+++ b/main-files/index-3.html
@@ -2012,28 +2012,40 @@
           </div>
           <div class="col-lg-6">
             <div class="seller-center-3-right">
-              <h2>
-                Get the Best Value for Your Car – Sell to Us Today
-              </h2>
+              <h2>Get the Best Value for Your Car – Sell to Us Today</h2>
               <p>
-                Receive a competitive and fair price for your car with our transparent evaluation process. Selling your car has never been this quick and hassle-free.
+                Receive a competitive and fair price for your car with our
+                transparent evaluation process. Selling your car has never been
+                this quick and hassle-free.
               </p>
 
               <ul class="mt-4">
                 <li>
                   <i class="fa-solid fa-check"></i>
                   <h4>Trusted by Thousands, Nationwide Reach</h4>
-                  <p>As a leading car-selling service, we’re available across the country, ensuring you can sell your car conveniently, no matter where you are.</p>
+                  <p>
+                    As a leading car-selling service, we’re available across the
+                    country, ensuring you can sell your car conveniently, no
+                    matter where you are.
+                  </p>
                 </li>
                 <li>
                   <i class="fa-solid fa-check"></i>
                   <h4>24/7 Support for a Stress-Free Experience</h4>
-                  <p>We’re here around the clock to assist you with any queries or concerns, making the car-selling process smooth and hassle-free.</p>
+                  <p>
+                    We’re here around the clock to assist you with any queries
+                    or concerns, making the car-selling process smooth and
+                    hassle-free.
+                  </p>
                 </li>
                 <li>
                   <i class="fa-solid fa-check"></i>
                   <h4>Quick and Efficient Car Repairs for Sellers</h4>
-                  <p>Need minor fixes before selling? Our expert team resolves most car issues on-site, ensuring your vehicle is ready for a seamless sale.</p>
+                  <p>
+                    Need minor fixes before selling? Our expert team resolves
+                    most car issues on-site, ensuring your vehicle is ready for
+                    a seamless sale.
+                  </p>
                 </li>
               </ul>
 
@@ -4078,6 +4090,124 @@
       </div>
     </section>
 
+    <section class="section-bg pt-5 home-car-details-3">
+      <div class="container-fluid">
+        <div class="row">
+          <div class="col-md-5 home-car-details-3-title">
+            <h2>Featured Car</h2>
+          </div>
+          <div class="col-md-7">
+            <div class="row">
+              <div class="col">
+                <div class="home-car-details-3-card">
+                  <div class="img">
+                    <img src="assets/img/homepage-3/wheel.png" alt="RevAuto" />
+                  </div>
+                  <div class="content">
+                    <h4>Wheel</h4>
+                    <p>
+                      Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    </p>
+                  </div>
+                </div>
+              </div>
+
+              <div class="col">
+                <div class="home-car-details-3-card">
+                  <div class="img">
+                    <img src="assets/img/homepage-3/light.png" alt="RevAuto" />
+                  </div>
+                  <div class="content">
+                    <h4>Light</h4>
+                    <p>
+                      Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    </p>
+                  </div>
+                </div>
+              </div>
+
+              <div class="col">
+                <div class="home-car-details-3-card">
+                  <div class="img">
+                    <img src="assets/img/homepage-3/brake.png" alt="RevAuto" />
+                  </div>
+                  <div class="content">
+                    <h4>Brake</h4>
+                    <p>
+                      Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="container-fluid mt-4">
+        <div class="row">
+          <div class="col-md-3">
+            <div class="left-side">
+              <h4>Explore</h4>
+              <p>
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Autem,
+                odit!
+              </p>
+              <a href="#" class="navigate-btn">Explore Cars</a>
+            </div>
+          </div>
+          <div class="col-md-6">
+            <img
+              class="main-image"
+              src="assets/img/hero/hero-car-1.png"
+              alt="RevAuto"
+            />
+          </div>
+          <div class="col-md-3 d-flex flex-column gap-4">
+            <div class="col">
+              <div class="home-car-details-3-card">
+                <h4>Battery</h4>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+              </div>
+            </div>
+
+            <div class="col">
+              <div class="home-car-details-3-card">
+                <div class="img">
+                  <img src="assets/img/homepage-3/engine.png" alt="RevAuto" />
+                </div>
+                <div class="content">
+                  <h4>Engine</h4>
+                  <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="home-car-details-3-card">
+                <h4>Disk</h4>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+              </div>
+            </div>
+            <div class="col">
+              <div class="home-car-details-3-card">
+                <div class="img">
+                  <img src="assets/img/homepage-3/piston.png" alt="RevAuto" />
+                </div>
+                <div class="content">
+                  <h4>Pisaton</h4>
+                  <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <!-- Footer section started -->
     <footer
       class="footer-3"
@@ -4295,3 +4425,12 @@
     <script src="assets/js/main.js"></script>
   </body>
 </html>
+
+<!-- <div class="col">
+  <div class="home-car-details-3-card">
+    <h4>Plug</h4>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit.
+    </p>
+  </div>
+</div> -->
