--- a/main-files/index-3.html
+++ b/main-files/index-3.html
@@ -362,7 +362,7 @@
     <section class="hero-1 bg-cover homepage-3">
       <div class="container">
         <div class="row g-4 align-items-center">
-          <div class="col-lg-6">
+          <div class="col-lg-7">
             <div class="hero-content-2">
               <span>New in Stock</span>
               <h1>
@@ -380,7 +380,7 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-6">
+          <div class="col-lg-5">
             <div class="hero-content-2">
               <div class="hero-3-slider swiper">
                 <div class="swiper-wrapper">
@@ -2002,7 +2002,7 @@
     </section>
 
     <!-- Seller Center -->
-    <section class="seller-center-3 py-5">
+    <section class="seller-center-3">
       <div class="container">
         <div class="row">
           <div class="col-lg-6">
@@ -4094,7 +4094,7 @@
       <div class="container-fluid">
         <div class="row">
           <div class="col-md-5 home-car-details-3-title">
-            <h2>Featured Car</h2>
+            <h2>Toyota Land Cruiser 300</h2>
           </div>
           <div class="col-md-7">
             <div class="row">
@@ -4150,10 +4150,10 @@
             <div class="left-side">
               <h4>Explore</h4>
               <p>
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Autem,
-                odit!
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vel, quasi commodi? Consectetur minus ducimus eligendi vel similique, cupiditate ipsum maiores beatae sed officia perferendis! Cupiditate voluptatibus culpa excepturi consectetur facilis!
               </p>
-              <a href="#" class="navigate-btn">Explore Cars</a>
+              <a href="#" class="navigate-btn mt-4">Schedule a Test Drive</a>
+              <a href="#" class="navigate-btn mt-4">Buy Now</a>
             </div>
           </div>
           <div class="col-md-6">
