--- a/main-files/index-3.html
+++ b/main-files/index-3.html
@@ -366,8 +366,7 @@
             <div class="hero-content-2">
               <span>New in Stock</span>
               <h1>
-                Discover the <br />
-                Latest Icons in Our Collection
+                Discover the Latest <br> Icons in Our Collection
               </h1>
               <p>
                 Discover cutting-edge innovation and exceptional <br />
