--- a/main-files/index-3.html
+++ b/main-files/index-3.html
@@ -383,7 +383,7 @@
             <div class="hero-content-2">
               <div class="hero-3-slider swiper">
                 <div class="swiper-wrapper">
-                  <div class="swiper-slide">
+                  <div class="swiper-slide slider">
                     <div class="hero-3-thumb">
                       <img
                         src="assets/img/homepage-3/slider-1.jpg"
@@ -395,7 +395,7 @@
                       </div>
                     </div>
                   </div>
-                  <div class="swiper-slide">
+                  <div class="swiper-slide slider">
                     <div class="hero-3-thumb">
                       <img
                         src="assets/img/homepage-3/slider-2.jpg"
@@ -407,7 +407,7 @@
                     </div>
                   </div>
 
-                  <div class="swiper-slide">
+                  <div class="swiper-slide slider">
                     <div class="hero-3-thumb">
                       <img
                         src="assets/img/homepage-3/slider-4.jpg"
@@ -418,7 +418,7 @@
                       </div>
                     </div>
                   </div>
-                  <div class="swiper-slide">
+                  <div class="swiper-slide slider">
                     <div class="hero-3-thumb">
                       <img
                         src="assets/img/homepage-3/slider-6.jpg"
@@ -429,7 +429,7 @@
                       </div>
                     </div>
                   </div>
-                  <div class="swiper-slide">
+                  <div class="swiper-slide slider">
                     <div class="hero-3-thumb">
                       <img
                         src="assets/img/homepage-3/slider-7.jpg"
