Fixed slider bugs

--- a/main-files/index-3.html
+++ b/main-files/index-3.html
@@ -383,9 +383,8 @@
             <div class="hero-content-2">
               <div class="hero-3-slider swiper">
                 <div class="swiper-wrapper">
-                  <div class="swiper-slide slider">
-                    <div class="hero-3-thumb">
-                      <img
+                  <div class="swiper-slide ">
+                    <img
                         src="assets/img/homepage-3/slider-1.jpg"
                         alt="RevAuto"
                       />
@@ -393,52 +392,46 @@
                       <div class="hero-3-footer">
                         <h3>BMW i4 : M Sport</h3>
                       </div>
-                    </div>
                   </div>
-                  <div class="swiper-slide slider">
-                    <div class="hero-3-thumb">
-                      <img
+
+                  <div class="swiper-slide ">
+                    <img
                         src="assets/img/homepage-3/slider-2.jpg"
                         alt="RevAuto"
                       />
                       <div class="hero-3-footer">
                         <h3>BMW i4 : M Sport</h3>
                       </div>
-                    </div>
                   </div>
 
-                  <div class="swiper-slide slider">
-                    <div class="hero-3-thumb">
-                      <img
+                  <div class="swiper-slide ">
+                    <img
                         src="assets/img/homepage-3/slider-4.jpg"
                         alt="RevAuto"
                       />
                       <div class="hero-3-footer">
                         <h3>BMW i4 : M Sport</h3>
                       </div>
-                    </div>
                   </div>
-                  <div class="swiper-slide slider">
-                    <div class="hero-3-thumb">
-                      <img
+
+                  <div class="swiper-slide ">
+                    <img
                         src="assets/img/homepage-3/slider-6.jpg"
                         alt="RevAuto"
                       />
                       <div class="hero-3-footer">
                         <h3>BMW i4 : M Sport</h3>
                       </div>
-                    </div>
                   </div>
-                  <div class="swiper-slide slider">
-                    <div class="hero-3-thumb">
-                      <img
+
+                  <div class="swiper-slide ">
+                    <img
                         src="assets/img/homepage-3/slider-7.jpg"
                         alt="RevAuto"
                       />
                       <div class="hero-3-footer">
                         <h3>BMW i4 : M Sport</h3>
                       </div>
-                    </div>
                   </div>
                 </div>
               </div>
@@ -4400,6 +4393,7 @@
       </div>
     </footer>
 
+
     <!--<< All JS Plugins >>-->
     <script src="assets/js/jquery-3.7.1.min.js"></script>
     <!--<< Viewport Js >>-->
@@ -4425,11 +4419,3 @@
   </body>
 </html>
 
-<!-- <div class="col">
-  <div class="home-car-details-3-card">
-    <h4>Plug</h4>
-    <p>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit.
-    </p>
-  </div>
-</div> -->
