--- a/main-files/index-3.html
+++ b/main-files/index-3.html
@@ -2004,6 +2004,8 @@
           </div>
           <div class="col-lg-6">
             <div class="seller-center-3-right">
+              
+              <h2>GHeading tag</h2>
               <h2>Get the Best Value for Your Car – Sell to Us Today</h2>
               <p>
                 Receive a competitive and fair price for your car with our
